# agentid

./: .gitignore  GROUP_FEATURE_BUILD_LOG.md  LICENSE  README.md  audit_log.csv  nixpacks.toml  railway.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml  publish-go-sdk.yml  publish-integrations.yml  publish-node-sdk.yml  publish-python-sdk.yml
AgentID_Docs/: generate_docs.py
docs/: CNAME  accept-invite.html  admin.html  agent.html  agents.html  connections.html  contracts.html  dashboard.html  dashboard.js  directory.html  home.html  index.html  landing.html  messages.html  my-agents.html  network.html  network.js  status.html  tasks.html  team-workspace.html
docs/docs/: index.html
examples/: agent_auth_demo.py  langchain_example.py  multi_agent_pipeline.py  quickstart.py
fix/: before-public.md
integrations/autogen-agentid/: README.md  pyproject.toml
integrations/autogen-agentid/autogen_agentid/: __init__.py  agent.py  verify.py
integrations/autogen-agentid/tests/: test_autogen_integration.py
integrations/crewai-agentid/: README.md  pyproject.toml
integrations/crewai-agentid/crewai_agentid/: __init__.py  agent.py  tools.py
integrations/crewai-agentid/tests/: test_crewai_integration.py
integrations/langchain-agentid/: pyproject.toml
integrations/langchain-agentid/langchain_agentid/: __init__.py  callbacks.py  tools.py
integrations/llamaindex-agentid/: README.md  pyproject.toml
integrations/llamaindex-agentid/llamaindex_agentid/: __init__.py  engine.py  tools.py
integrations/llamaindex-agentid/tests/: test_engine.py
langchain_pr/: PR_DESCRIPTION.md
langchain_pr/langchain_community/callbacks/: agentid_callback.py
langchain_pr/langchain_community/tools/agentid/: __init__.py  tool.py
langchain_pr/tests/unit_tests/callbacks/: test_agentid_callback.py
langchain_pr/tests/unit_tests/tools/: test_agentid_tools.py
mcp-agentid/: README.md  pyproject.toml
mcp-agentid/mcp_agentid/: __init__.py  audit.py  decorator.py  middleware.py  trust.py
mcp-agentid/tests/: test_secure.py
registry/: requirements.txt  server.py
sdk/go/: README.md  agentid.go  go.mod
sdk/python/: README.md  pyproject.toml
sdk/python/agentid/: __init__.py  agent.py  crypto.py  http_registry.py  identity.py  public_api.py  registry.py
sdk/python/agentid/brain/: __init__.py  brain.py
sdk/python/agentid/brain/actions/: __init__.py  executor.py
sdk/python/agentid/brain/judgment/: __init__.py  engine.py
sdk/python/agentid/brain/memory/: __init__.py  store.py
sdk/python/agentid/brain/perception/: __init__.py  api.py  base.py  files.py  git.py
sdk/python/agentid/brain/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
sdk/python/agentid/brain/tools/: __init__.py  base.py  fetch_url.py  mcp.py  web_search.py
sdk/python/agentid/brain/triggers/: __init__.py  change.py  schedule.py
sdk/python/agentid/integrations/: __init__.py  autogen.py  crewai.py  langchain.py
sdk/python/agentid/runtime/: __init__.py  __main__.py  client.py  config.py  handlers.py  health.py  runtime.py  webhook.py
sdk/python/examples/: 01_web_search_tool.py  02_fetch_url_tool.py  03_providers.py  04_judgment_engine.py  05_perception.py  06_full_brain.py  07_mcp_bridge.py  test_agent.py
sdk/python/tests/: test_agent.py  test_brain.py  test_brain_mcp.py  test_cross_sdk.py  test_http_registry.py  test_langchain_integration.py  test_runtime.py
sdk/typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: agent_auth.ts
sdk/typescript/src/: agent.ts  crypto.ts  identity.ts  index.ts  registry.ts
sdk/typescript/tests/: crypto.test.ts  identity.test.ts
spec/: protocol.md
