[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-agentid"
version = "0.1.0"
description = "AgentID integration for LangChain — identity, discovery, and trust for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["langchain", "agents", "identity", "ai", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.2",
    "agentid>=0.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "langchain-core>=0.2"]

[project.urls]
Homepage = "https://github.com/bekisol/agentid"
Repository = "https://github.com/bekisol/agentid"

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_agentid*"]
