[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaindex-agentid"
version = "0.1.0"
description = "AgentID integration for LlamaIndex — identity, discovery, and trust for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llamaindex", "llama-index", "agents", "identity", "ai", "multi-agent", "trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "llama-index-core>=0.10",
    "agentid-protocol>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "llama-index-core>=0.10"]

[project.urls]
Homepage = "https://github.com/bekisol/agentid"
Repository = "https://github.com/bekisol/agentid"

[tool.setuptools.packages.find]
where = ["."]
include = ["llamaindex_agentid*"]
