[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentid"
version = "0.1.0"
description = "Identity, discovery, and trust for AI agents"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
    "base58>=2.1",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentid*"]
