[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentid-protocol"
version = "0.3.0"
description = "Identity, discovery, trust, and runtime for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vikhulus", email = "hello@vikhulus.com" }]
requires-python = ">=3.11"
keywords = ["agents", "identity", "ai", "multi-agent", "did", "trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cryptography>=42.0",
    "base58>=2.1",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev     = ["pytest>=8.0", "pytest-asyncio>=0.23"]
runtime = []           # runtime uses only core deps (httpx already required)
brain   = []           # brain uses only core deps (httpx already required)
langchain = ["langchain-core>=0.2"]
crewai  = ["crewai>=0.28"]
autogen = ["autogen-agentchat>=0.4"]
all     = ["langchain-core>=0.2", "crewai>=0.28", "autogen-agentchat>=0.4"]

[project.scripts]
agentid-runtime = "agentid.runtime.__main__:main"

[project.urls]
Homepage = "https://agentid.dev"
Repository = "https://github.com/bekisol/agentid"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentid*"]
